c2prj1_cards/grade.txt
Grading at Fri Jan 17 13:53:49 UTC 2020
Compiling cards.c
In file included from cards.c:2:0:
cards.c: In function ‘assert_card_valid’:
cards.c:10:5: error: expected expression before ‘)’ token
     assert();
     ^
Could not compile your card.c!

Overall Grade: FAILED
